--- a/stylesheets/sass/_styles.scss
+++ b/stylesheets/sass/_styles.scss
@@ -9,8 +9,8 @@ body {
 nav {
   @include clearfix;
   height: 60px;
+  overflow: visible;
   padding: 0 20px;
-  position: fixed;
   top: 0px;
   left: 0px;
   right: 0px;
@@ -110,7 +110,7 @@ div.container {
   @include border-radius(4px);
   @include box-shadow(0 3px 6px rgba($black, 0.5));
   height: 750px; // fix with percentage later
-  margin: 60px 20px 20px 20px;
+  margin: 0 20px 20px 20px;
   overflow-y: scroll;
   padding: 20px;
   position: relative;
